--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -1,34 +1,36 @@
-# This workflow uses actions that are not certified by GitHub.
-# They are provided by a third-party and are governed by
-# separate terms of service, privacy policy, and support
-# documentation.
-# This workflow will build a Java project with Gradle and cache/restore any dependencies to improve the workflow execution time
-# For more information see: https://docs.github.com/en/actions/automating-builds-and-tests/building-and-testing-java-with-gradle
-
 name: Java CI with Gradle
 
 on:
   push:
-    branches: [ "main" ]
+    branches:
+      - main  # Trigger workflow on push to the main branch
   pull_request:
-    branches: [ "main" ]
-
-permissions:
-  contents: read
+    branches:
+      - main  # Trigger workflow on pull requests targeting the main branch
 
 jobs:
   build:
-
     runs-on: ubuntu-latest
 
     steps:
-    - uses: actions/checkout@v3
+    - uses: actions/checkout@v2
+
     - name: Set up JDK 11
-      uses: actions/setup-java@v3
+      uses: actions/setup-java@v2
       with:
-        java-version: '11'
-        distribution: 'temurin'
+        java-version: '11'  # Choose the JDK version (you can change it)
+
+    - name: Grant execute permission for Gradlew
+      run: chmod +x gradlew
+
     - name: Build with Gradle
-      uses: gradle/gradle-build-action@bd5760595778326ba7f1441bcf7e88b49de61a25 # v2.6.0
+      run: ./gradlew build --no-daemon  # Command to build the Gradle project
+
+    - name: Run tests
+      run: ./gradlew test --no-daemon  # Command to run tests
+
+    - name: Upload test results
+      uses: actions/upload-artifact@v2
       with:
-        arguments: build
+        name: test-results
+        path: build/reports/tests  # Path to test reports
