--- a/pom.xml
+++ b/pom.xml
@@ -64,7 +64,7 @@
                             <arguments>install</arguments>
                         </configuration>
                     </execution>
-                    <execution>
+                    <!-- <execution>
                         <id>npm run build</id>
                         <goals>
                             <goal>npm</goal>
@@ -72,7 +72,7 @@
                         <configuration>
                             <arguments>run build</arguments>
                         </configuration>
-                    </execution>
+                    </execution> -->
                 </executions>
             </plugin>
 
