--- a/pom.xml
+++ b/pom.xml
@@ -41,8 +41,8 @@
                 <artifactId>frontend-maven-plugin</artifactId>
                 <version>1.6</version>
                 <configuration>
-                    <workingDirectory>frontend</workingDirectory>
-                    <installDirectory>target</installDirectory>
+                    <workingDirectory>${project.basedir}/frontend</workingDirectory>
+                    <installDirectory>${project.basedir}/target</installDirectory>
                 </configuration>
                 <executions>
                     <execution>
@@ -51,8 +51,8 @@
                             <goal>install-node-and-npm</goal>
                         </goals>
                         <configuration>
-                            <nodeVersion>v20.10.0</nodeVersion>
-                            <npmVersion>10.2.3</npmVersion>
+                            <nodeVersion>v16.13.0</nodeVersion>
+                            <npmVersion>8.3.0</npmVersion>
                         </configuration>
                     </execution>
                     <execution>
