--- a/pom.xml
+++ b/pom.xml
@@ -41,8 +41,8 @@
                 <artifactId>frontend-maven-plugin</artifactId>
                 <version>1.6</version>
                 <configuration>
-                    <workingDirectory>${project.basedir}/frontend</workingDirectory>
-                    <installDirectory>${project.basedir}/target</installDirectory>
+                    <workingDirectory>frontend</workingDirectory>
+                    <installDirectory>target</installDirectory>
                 </configuration>
                 <executions>
                     <execution>
@@ -51,8 +51,8 @@
                             <goal>install-node-and-npm</goal>
                         </goals>
                         <configuration>
-                            <nodeVersion>v16.13.0</nodeVersion>
-                            <npmVersion>8.3.0</npmVersion>
+                            <nodeVersion>v20.10.0</nodeVersion>
+                            <npmVersion>10.2.3</npmVersion>
                         </configuration>
                     </execution>
                     <execution>
@@ -63,6 +63,12 @@
                         <configuration>
                             <arguments>install</arguments>
                         </configuration>
+                    </execution>
+                    <execution>
+                        <id>npm install</id>
+                        <goals>
+                            <goal>npm</goal>
+                        </goals>
                     </execution>
                     <execution>
                         <id>npm run build</id>
