--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,7 +11,8 @@
     "react-dom": "^18.2.0",
     "react-scripts": "^5.0.1",
     "web-vitals": "^2.1.4",
-    "typescript":" 4.8.2"
+    "typescript":" 4.8.2",
+    "tailwindcss": "^3.0.0"
   },
   "scripts": {
     "start": "react-scripts start",
