--- a/frontend/package.json
+++ b/frontend/package.json
@@ -8,11 +8,10 @@
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "framer-motion": "^10.16.16",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-scripts": "^5.0.1",
-    "tailwindcss": "^3.0.0",
-    "typescript": " 4.8.2",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
@@ -43,6 +42,8 @@
     ]
   },
   "devDependencies": {
-    "gh-pages": "^6.1.0"
+    "gh-pages": "^6.1.0",
+    "tailwindcss": "^3.3.6",
+    "typescript": "^5.3.3"
   }
 }
