--- a/frontend/package.json
+++ b/frontend/package.json
@@ -12,7 +12,9 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-scripts": "^5.0.1",
-    "web-vitals": "^2.1.4"
+    "web-vitals": "^2.1.4",
+    "tailwindcss": "^3.3.6",
+    "typescript": "^5.3.3"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -42,8 +44,6 @@
     ]
   },
   "devDependencies": {
-    "gh-pages": "^6.1.0",
-    "tailwindcss": "^3.3.6",
-    "typescript": "^5.3.3"
+    "gh-pages": "^6.1.0"
   }
 }
