--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,10 +11,12 @@
     "framer-motion": "^10.16.16",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-icons": "^4.12.0",
+    "react-router-dom": "^6.20.1",
     "react-scripts": "^5.0.1",
-    "web-vitals": "^2.1.4",
     "tailwindcss": "^3.0.0",
-    "typescript": "^4.8.2"
+    "typescript": "^4.8.2",
+    "web-vitals": "^2.1.4"
   },
   "scripts": {
     "start": "react-scripts start",
