--- a/.github/workflows/snyk-security.yml
+++ b/.github/workflows/snyk-security.yml
@@ -20,9 +20,9 @@ name: Snyk Security
 
 on:
   push:
-    branches: ["Backend"]
+    branches: ["main", "Backend"]
   pull_request:
-    branches: ["Backend"]
+    branches: ["main", "Backend"]
 
 permissions:
   contents: read
