--- a/pom.xml
+++ b/pom.xml
@@ -11,7 +11,7 @@
 	<groupId>sr</groupId>
 	<artifactId>tm</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
-	<name>travel-memories</name>
+	<name>TravelMemories.github.io</name>
 	<description>Init project for Spring Boot</description>
 	<properties>
 		<java.version>17</java.version>
