--- a/frontend/package.json
+++ b/frontend/package.json
@@ -1,16 +1,18 @@
 {
   "name": "frontend",
   "version": "0.1.0",
-  "homepage": "https://ReactorSpring.github.io/travel-memories",
+  "homepage": "https://TravelMemories.github.io/",
   "private": true,
   "dependencies": {
     "@babel/plugin-proposal-private-property-in-object": "7.21.11",
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "@vercel/speed-insights": "^1.0.2",
     "framer-motion": "^10.16.16",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-dropzone": "^14.2.3",
     "react-icons": "^4.12.0",
     "react-router-dom": "^6.20.1",
     "react-scripts": "^5.0.1",
