--- a/frontend/package.json
+++ b/frontend/package.json
@@ -18,6 +18,7 @@
     "react-icons": "^4.12.0",
     "react-router-dom": "^6.20.1",
     "react-scripts": "^5.0.1",
+    "tailwind-datepicker-react": "^1.4.3",
     "tailwindcss": "^3.0.0",
     "typescript": "^4.8.2",
     "web-vitals": "^2.1.4"
