--- a/frontend/package.json
+++ b/frontend/package.json
@@ -9,6 +9,7 @@
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "@vercel/speed-insights": "^1.0.2",
+    "clsx": "^2.1.0",
     "dayjs": "^1.11.10",
     "framer-motion": "^10.16.16",
     "react": "^18.2.0",
@@ -19,6 +20,7 @@
     "react-router-dom": "^6.20.1",
     "react-scripts": "^5.0.1",
     "tailwind-datepicker-react": "^1.4.3",
+    "tailwind-merge": "^2.2.0",
     "tailwindcss": "^3.0.0",
     "typescript": "^4.8.2",
     "web-vitals": "^2.1.4"
