--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,6 +10,7 @@
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "@vercel/speed-insights": "^1.0.2",
+    "axios": "^1.6.5",
     "clsx": "^2.1.0",
     "dayjs": "^1.11.10",
     "framer-motion": "^10.16.16",
