--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,6 +11,7 @@
     "@testing-library/user-event": "^13.5.0",
     "@vercel/speed-insights": "^1.0.2",
     "axios": "^1.6.5",
+    "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.0",
     "dayjs": "^1.11.10",
     "framer-motion": "^10.16.16",
